<resources>
    <string name="app_name">CTUIntern</string>
    <string name="welcome_string">Chào mừng đến với CTU Intern</string>
    <string name="forgot_password">Quên mật khẩu? <b>Liên hệ ngay</b></string>
    <string name="account">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="recruiment">Tôi là <b>nhà tuyển dụng</b></string>
    <string name="login">Đăng nhập</string>
    <string name="welcome_recruiment">Chào mừng nhà tuyển dụng\nHãy giới thiệu về bản thân!</string>
    <string name="welcome_ctu">Chào mừng đến với CTU Intern</string>
    <string name="send_request_to_email">Chúng tôi đã gửi đến Email của bạn yêu cầu kích hoạt tài khoản</string>
    <string name="check_please">Vui lòng kiểm tra để đăng nhập</string>
    <string name="company_name">Tên công ty</string>
    <string name="back_to_login">Trở lại đăng nhập</string>
    <string name="field">Lĩnh vực</string>
    <string name="address">Địa chỉ</string>
    <string name="website_address">Địa chỉ website</string>
    <string name="company_size">Qui mô doanh nghiệp</string>
    <string name="back">Trở lại</string>
    <string name="next">Tiếp tục</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="phone">Số điện thoại</string>
    <string name="email">Email kích hoạt tài khoản</string>
    <string name="active_account">Kích hoạt</string>
    <string name="login_fail_alert">Đăng nhập thất bại</string>
    <string name="register_fail_alert">Đăng ký thất bại</string>
    <string name="login_fail_alert_content">Tài khoản hoặc mật khẩu không hợp lệ</string>
    <string name="validating">Đang xác thực...</string>
    <string name="your_oppo">Cơ hội dành cho bạn</string>
    <string name="interview">Phỏng vấn</string>
    <string name="intern">Thực tập</string>
    <string name="news">Tin tức</string>
    <string name="favorite">Yêu thích</string>
    <string name="apply">Ứng tuyển</string>
    <string name="interviewStateWaiting"><![CDATA[Trạng thái: <span style="color: #878787">Chưa phản hồi</span>]]></string>
    <string name="interviewStateAccept"><![CDATA[Trạng thái: <span style="color: #56A843">Phỏng vấn</span>]]></string>
    <string name="interviewDayWaiting">Ngày hẹn: Chưa phản hồi</string>
    <string name="applyNewsContent"><![CDATA[Vui lòng đợi phản hồi từ nhà tuyển dụng, bạn có thể xem lại tin tại <span style="color: #EBA600">Ứng tuyển</span>]]></string>
    <string name="content"><b>Nội dung công việc:</b>%1$s</string>
    <string name="numOfSession"><b>Số buổi làm việc:</b>%1$d buổi</string>
    <string name="review"><b>Nhận xét:</b>%1$s</string>
    <string name="IVpart">- Có được sự hiểu biết tốt về cơ quan nơi thực tập.\n- Phương pháp thực hiện phù hợp với nội dung công việc được giao.\n- Kết quả củng cố lý thuyết.\n- Kết quả rèn luyện kỹ năng thực hành.\n- Kinh nghiệm thực tiễn thu nhận được.\n- Kết quả công việc có đóng góp cho cơ quan nơi thực tập</string>
    <string name="totalStudent">Tổng số sinh viên: %1$d</string>
    <string name="unemployedStudent">Sinh viên chưa tìm việc: %1$d (%2$d%)</string>
    <string name="employStudent">Sinh viên đang tìm việc: %1$d (%2$d%)</string>
    <string name="studentInInterview">Sinh viên chờ phỏng vấn: %1$d (%2$d%)</string>
    <string name="studentInInternship">Sinh viên có việc: %1$d (%2$d%)</string>
    <string name="process_phase_week">Tiến độ hiện tại: tuần 0%1$d</string>
    <string name="time_intern">Từ ngày %1$s đến ngày %2$s</string>
    <string name="total_student">Tổng số: %1$d sinh viên</string>
    <string name="intern_student">Đang thực tập: %1$d sinh viên (%2$d%)</string>
    <string name="number_student">%1$d sinh viên</string>
    <string name="number_alert">%1$d cảnh báo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>