<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="@color/diamon_blue"
    app:cardCornerRadius="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/week"
            android:text="Tuần 1 (dd/mm/yyyy - dd/mm/yyyy)"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/baloo_2"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberOfSession"
            android:text="@string/numOfSession"
            android:textSize="16sp"
            android:fontFamily="@font/baloo_2"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/content"
            android:text="@string/content"
            android:textSize="16sp"
            android:fontFamily="@font/baloo_2"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/review"
            android:text="@string/review"
            android:textSize="16sp"
            android:fontFamily="@font/baloo_2"
            android:textColor="@color/black"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>