<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_string"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        android:textColor="@color/blue"
        android:fontFamily="@font/baloo_2"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logoctu"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/background_input_account">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailIcon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/email"
            android:layout_alignParentLeft="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/emailIcon"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:passwordToggleTint="@color/blue"
            app:boxBackgroundMode="none"
            android:padding="0dp"
            android:layout_marginBottom="10dp"
            android:layout_centerVertical="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:fontFamily="@font/baloo_2"
                android:hint="Email"
                android:textColorHint="@color/black"
                android:padding="10dp"
                android:layout_marginBottom="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/background_input_account">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lock"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/lock"
            android:layout_alignParentLeft="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_toRightOf="@id/lock"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:passwordToggleTint="@color/blue"
            app:boxBackgroundMode="none"
            android:padding="0dp"
            android:layout_marginBottom="10dp"
            android:layout_centerVertical="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:fontFamily="@font/baloo_2"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:padding="0dp"
                android:layout_marginBottom="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/forgetPassword"
        android:textSize="20sp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/baloo_2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/loginBtn"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:background="@drawable/background_login_button"
        app:backgroundTint="@color/blue"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recruiment"
        android:id="@+id/register"
        android:fontFamily="@font/baloo_2"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"/>

</LinearLayout>