<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_recruiment"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:textSize="24sp"
        android:textColor="@color/blue"
        android:fontFamily="@font/baloo_2"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_input_account">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accountIcon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/account"
            android:layout_alignParentLeft="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/accountIcon"
            app:passwordToggleTint="@color/blue"
            app:boxBackgroundMode="none"
            android:padding="0dp"
            android:layout_marginBottom="10dp"
            android:layout_centerVertical="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/account"
                android:inputType="text"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:fontFamily="@font/baloo_2"
                android:hint="@string/account"
                android:textColorHint="@color/black"
                android:padding="0dp"
                android:layout_marginBottom="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_input_account">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordIcon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/lock"
            android:layout_alignParentLeft="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/passwordIcon"
            app:passwordToggleTint="@color/blue"
            app:boxBackgroundMode="none"
            app:passwordToggleEnabled="true"
            android:gravity="center_vertical"
            android:layout_centerVertical="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:fontFamily="@font/baloo_2"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:padding="0dp"
                android:layout_marginBottom="5dp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_input_account">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPasswordIcon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/lock"
            android:layout_alignParentLeft="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/confirmPasswordIcon"
            app:passwordToggleTint="@color/blue"
            app:boxBackgroundMode="none"
            app:passwordToggleEnabled="true"
            android:gravity="center_vertical"
            android:layout_centerVertical="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmPassword"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:fontFamily="@font/baloo_2"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/black"
                android:padding="0dp"
                android:layout_marginBottom="5dp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_input_account">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneIcon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/phone"
            android:layout_alignParentLeft="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/phoneIcon"
            app:passwordToggleTint="@color/blue"
            app:boxBackgroundMode="none"
            android:padding="0dp"
            android:layout_marginBottom="10dp"
            android:layout_centerVertical="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone"
                android:inputType="text"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:fontFamily="@font/baloo_2"
                android:hint="@string/phone"
                android:textColorHint="@color/black"
                android:padding="0dp"
                android:layout_marginBottom="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_input_account">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailIcon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/email"
            android:layout_alignParentLeft="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/emailIcon"
            app:passwordToggleTint="@color/blue"
            app:boxBackgroundMode="none"
            android:padding="0dp"
            android:layout_marginBottom="10dp"
            android:layout_centerVertical="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:inputType="text"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:fontFamily="@font/baloo_2"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:padding="0dp"
                android:layout_marginBottom="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/nextBtn"
        android:text="@string/active_account"
        android:fontFamily="@font/baloo_2_bold"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:background="@drawable/background_login_button"
        app:backgroundTint="@color/blue"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/backBtn"
        android:text="@string/back"
        android:fontFamily="@font/baloo_2_bold"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:background="@drawable/background_back_button"
        app:backgroundTint="@color/yellow"
        android:layout_gravity="center_horizontal" />

</LinearLayout>